criado botão de copiar nome

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 <button onclick="adicionarLinhas()">Adicionar Linhas</button>
                 <button onclick="removerDuplicatas()">Remover Linhas Duplicadas</button>
                 <button onclick="limparDados()">Limpar Dados</button> <!-- Botão alterado para "Limpar Dados" -->
+                <button onclick="copiarNomes()">Copiar Nomes</button> <!-- Botão para copiar nomes -->
+                <button onclick="copiarTelefones()">Copiar Telefones</button> <!-- Botão para copiar telefones -->
             </div>
             <!-- Tabela de contatos -->
             <table id="contactsTable">
