--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filtro de Listas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="area">
@@ -14,6 +14,7 @@
                 <button onclick="adicionarLista(1)">Lista 1</button>
                 <button onclick="adicionarLista(2)">Lista 2</button>
                 <button onclick="filtrar()">Filtrar</button>
+                <button onclick="copiar()">Copiar</button>
             </div>
         </div>
         <div class="area_tabela">
@@ -31,6 +32,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.1/xlsx.full.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
